[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
actix-web = "4"

base64 = "0.13.0"
reqwest = { version = "0.11.4", features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
mikrotik = "0.0.10"
log = "0.4.0"
env_logger = "0.9.0"
paperclip = { version = "0.7.0", features = ["actix4", "v3"] }
